css: prevent image title from going on its own line if too wide for screen

--- a/ourbigbook.scss
+++ b/ourbigbook.scss
@@ -681,7 +681,7 @@ ol, ul {
 
 // Titles of non-header things like images, videos, quotes and code.
 div.title {
-  display: inline-block;
+  display: inline;
   font-weight: bold;
 }
 
